namespace java com.moseeker.thrift.gen.dao.struct.jobdb
namespace py thrift_gen.gen.dao.struct.jobdb


struct JobApplicationDO {


}


struct JobApplicationConfDO {


}


struct JobApplicationStatusBeisenDO {


}


struct JobCustomDO {


}


struct JobOccupationDO {


}


struct JobOccupationRelDO {


}


struct JobPositionDO {


}


struct JobPositionCityDO {


}


struct JobPositionExtDO {


}


struct JobPositionShareTplConfDO {


}


struct JobPositionTopicDO {


}


struct JobResumeOtherDO {


}
